--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Página de Prueba</title>
-  </head>
-  <body style="margin:0; padding:0;">
-    <img src="https://i.postimg.cc/JzLPsgPL/problemas-tecnicos.png" 
-         alt="Problemas técnicos" 
-         style="display:block; width:100%; max-width:100%;">
-  </body>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>CardsFromSpain</title>
+  <!-- Para que se ajuste correctamente en dispositivos móviles -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    /* Quitamos márgenes y rellenos del body */
+    body {
+      margin: 0;
+      padding: 0;
+      /* Centramos el contenido vertical y horizontalmente */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      /* Le damos la altura total de la ventana */
+      height: 100vh;
+      /* Un color de fondo opcional */
+      background-color: #000;
+    }
+    img {
+      /* Ajuste responsivo */
+      max-width: 100%;
+      height: auto;
+      display: block;
+    }
+  </style>
+</head>
+<body>
+  <img src="https://i.postimg.cc/ZRWNWM4x/problemas-tecnicos.png" 
+       alt="Problemas Técnicos">
+</body>
 </html>
