--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <img src="https://i.postimg.cc/ZRWNWM4x/problemas-tecnicos.png" 
+  <img src="https://iili.io/33plqla.png" 
        alt="Problemas Técnicos">
 </body>
 </html>
